Wrapping up swagger updates
