# app.js
@@ -4,10 +4,11 @@ var path = require("path");
 var cookieParser = require("cookie-parser");
 var logger = require("morgan");
 var cors = require("cors");
+const pathToSwaggerUi = require("swagger-ui-dist").absolutePath();
 
 var app = express();
 
-const { HTTP_UNAUTHORIZED } = require("./services/constants");
+const { HTTP_UNAUTHORIZED } = require("./util/constants");
 
 // view engine setup
 app.set("views", path.join(__dirname, "views"));
@@ -18,12 +19,13 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, "public")));
+app.use(express.static(pathToSwaggerUi));
 app.use(cors());
 
 app.use(function(req, res, next) {
-  if (!req.headers.authorization) {
-    res.status(HTTP_UNAUTHORIZED).send("Unauthorized");
-  }
+  // if (!req.headers.authorization) {
+  //   res.status(HTTP_UNAUTHORIZED).send("Unauthorized");
+  // }
   res.setHeader("Content-Type", "application/json");
   res.header("Access-Control-Allow-Origin", "*");
   res.header(
@@ -39,9 +41,9 @@ app.get("/", (req, res) => {
   });
 });
 
-app.use("/users", require("./routes/users"));
-app.use("/posts", require("./routes/posts"));
-app.use("/comments", require("./routes/comments"));
+app.use("/v1/users", require("./routes/users"));
+app.use("/v1/posts", require("./routes/posts"));
+app.use("/v1/comments", require("./routes/comments"));
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
